# Mancala

./: CMakeLists.txt  Readme.md  doc.md  documentation.md  imgui.ini  main.cpp  manuel_presentation.md
Game/: MancalaEngine.h  MancalaGame.cpp  MancalaGame.h  ThemeManager.h
Interaction/: InputManager.h  ObjectPicker.cpp  ObjectPicker.h
Rendering/: Camera.h  Material.h  RenderModeManager.h  Texture.h  TextureManager.cpp  TextureManager.h  shader.cpp  shader.h
Scene/: GameObject.h  Transform.h
Shaders/: phong.fs  phong.vs
core/: Mesh.cpp  Mesh.h  Window.cpp  Window.h
